# FounderLookup

./: CONTEXT.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/founderlookup/: __init__.py  main.py  runtime.py
backend/tests/contract/: test_domain_contract_surface.py  test_fake_ingestion_adapters.py  test_fake_intelligence_adapter.py  test_fake_pipeline_run_adapter.py  test_golden_fixtures.py  test_structured_analysis_ports.py
backend/tests/integration/: test_api_v1.py  test_app.py  test_live_screening_integration.py  test_outbound_scoring_pipeline.py  test_prd_demo_acceptance.py  test_runtime_composition.py  test_runtime_openai_structured.py  test_runtime_public_pdf_composition.py
backend/tests/live/: test_live_mistral_ocr.py  test_live_openai_reasoner.py  test_live_railway_deployment.py  test_live_source_specific_adapters.py  test_tavily_hackathon_pipeline.py
backend/tests/unit/: test_analysis.py  test_api_settings.py  test_application_intake.py  test_application_metadata.py  test_application_screening_bridge.py  test_application_service.py  test_artifacts.py  test_axes.py  test_confidence.py  test_deck_evidence.py  test_demo_bootstrap.py  test_domain_assessment.py  test_domain_common.py  test_domain_evidence_and_scores.py  test_domain_query_and_collection.py  test_domain_runs.py  test_evaluation.py  test_founder_reads.py  test_github_developer_activity_source.py  test_hackathon_projection.py  test_hackernews_source.py  test_identity_resolution.py  test_inbound_query_planner.py  test_rubrics.py  (+18 more)
(+160 files in other folders)
