[project]
name = "founderlookup-backend"
version = "0.1.0"
description = "Evidence-first sourcing and screening backend for FounderLookup."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic>=2,<3",
    "uvicorn>=0.34,<1",
]

[dependency-groups]
test = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
]
quality = [
    "mypy>=1.15,<2",
    "ruff>=0.11,<1",
]
dev = [
    { include-group = "test" },
    { include-group = "quality" },
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/founderlookup"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["founderlookup"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
